# ukbeaver

./: .gitignore  README.md  Snakefile  main.py  pyproject.toml  pyrightconfig.json
doc/paper/: _quarto.yml  index.qmd
doc/paper/_manuscript/: index.html
doc/paper/_manuscript/site_libs/bootstrap/: bootstrap-ad113efb0c591996415fcb45ccd203b2.min.css  bootstrap-f79e745914418b532bffd2df27b04ed6.min.css
example/: demo.ipynb
src/ukbeaver/: __init__.py
src/ukbeaver/data/: imaging.py  tabular.py
src/ukbeaver/skleton/: pytoch_ddp.py
src/ukbeaver/util/: __init__.py  category.py  helper.py
ukbeaver/dictionaries/: field.txt
